🐛 Alternative fix for button stretching in grid

--- a/components/button/Button.module.css
+++ b/components/button/Button.module.css
@@ -1,5 +1,4 @@
 .btn {
-  margin: 0 auto;
   font-size: 2.7em;
   padding: 0.05em 0.2em;
   line-height: 1em;
