--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,4 +11,5 @@
   display: grid;
   grid-auto-flow: row;
   row-gap: 1.5em;
+  justify-items: center;
 }
